crates/cadenza-compiler/test-data/semantics/compound-types-error-missing-required-field.cdz
struct Point { x = Integer, y = Integer }
Point { x = 10 }